[gd_scene load_steps=2 format=3 uid="uid://b38cda5v1w0oc"]

[ext_resource type="Script" path="res://Characters/hit_box.gd" id="1_8jg2f"]

[node name="HitBox" type="Area2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_8jg2f")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="DisableTimer" type="Timer" parent="."]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="DisableTimer" to="." method="_on_timer_timeout"]
